--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -8840,8 +8840,8 @@ header {
   border-radius: 0;
   -webkit-transform: translateY(0) translateZ(0);
   transform: translateY(0) translateZ(0);
-  -webkit-transition-duration: 0s, 0s;
-  transition-duration: 0s, 0s;
+  -webkit-transition-duration: 0s,0s;
+  transition-duration: 0s,0s;
   -webkit-animation: cb-checkbox_rounded-ripple-in 0.5s cubic-bezier(0.4, 0, 0, 1);
   animation: cb-checkbox_rounded-ripple-in 0.5s cubic-bezier(0.4, 0, 0, 1);
 }
@@ -8970,7 +8970,7 @@ header {
   background: 0 0;
   border: 0;
   border-radius: 0;
-  outline: 0 !important;
+  outline: 0!important;
   font-family: 'NeueHaasDisplay-bol';
   font-size: 1.4em;
   letter-spacing: 1px;
@@ -9274,7 +9274,7 @@ header {
   background: 0 0;
   border: 0;
   border-radius: 0;
-  outline: 0 !important;
+  outline: 0!important;
   font-size: 20px;
   font-weight: 600;
   line-height: 25px;
@@ -9855,7 +9855,8 @@ header {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   #footer {
-    padding-top: 2vh;
+    padding-top: 2vh
+  ;
   }
   #footer .footer-flex {
     display: block;
@@ -9904,7 +9905,8 @@ header {
     right: 0;
     bottom: -117%;
     width: 100%;
-    height: 100vh;
+    height: 100vh
+;
     background: #fff;
     z-index: 10;
     overflow: auto;
@@ -11504,8 +11506,8 @@ header {
   right: -70px;
 }
 .div-flex .colum-1 .over-text h2 {
-  font-size: 60px;
-  line-height: 80px;
+  font-size: 60px ;
+  line-height: 80px ;
 }
 .div-flex .six-points {
   position: relative;
@@ -11827,10 +11829,10 @@ body.dark .ar-work-cat,
   z-index: 0;
 }
 .footer .mb-auto {
-  margin-bottom: auto !important;
+  margin-bottom: auto!important;
 }
 .footer .d-block {
-  display: block !important;
+  display: block!important;
 }
 .footer .mt-3 {
   margin-top: 1.875rem !important;
@@ -11875,15 +11877,15 @@ body.dark .ar-work-cat,
   color: transparent;
 }
 .footer .footer__inner .flex-column {
-  -webkit-box-orient: vertical !important;
-  -webkit-box-direction: normal !important;
-      -ms-flex-direction: column !important;
-          flex-direction: column !important;
+  -webkit-box-orient: vertical!important;
+  -webkit-box-direction: normal!important;
+      -ms-flex-direction: column!important;
+          flex-direction: column!important;
 }
 .footer .footer__inner .d-flex {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
+  display: -webkit-box!important;
+  display: -ms-flexbox!important;
+  display: flex!important;
 }
 .footer .footer__inner .bg-light {
   background-color: #f5f5f5 !important;
@@ -11922,7 +11924,7 @@ body.dark .ar-work-cat,
   margin-left: auto;
 }
 .footer .footer__inner .w-100 {
-  width: 100% !important;
+  width: 100%!important;
 }
 .footer .footer__inner .footer-top__bg {
   bottom: 40px;
@@ -12017,14 +12019,14 @@ body.dark .ar-work-cat,
   width: 50px;
 }
 .footer .footer__inner .align-items-center {
-  -webkit-box-align: center !important;
-      -ms-flex-align: center !important;
-          align-items: center !important;
+  -webkit-box-align: center!important;
+      -ms-flex-align: center!important;
+          align-items: center!important;
 }
 .footer .footer__inner .d-flex {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
+  display: -webkit-box!important;
+  display: -ms-flexbox!important;
+  display: flex!important;
 }
 .footer .footer__inner .link__icon svg.svg-arrow-left,
 .footer .footer__inner .link__icon svg.svg-arrow-right {
@@ -12073,20 +12075,20 @@ body.dark .ar-work-cat,
     margin-top: 0.625rem !important;
   }
   .footer .footer__inner .d-xl-flex {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
   }
   .footer .footer__inner .align-items-xl-center {
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
+    -webkit-box-align: center!important;
+        -ms-flex-align: center!important;
+            align-items: center!important;
   }
   .footer .footer__inner .container {
     max-width: 1140px;
   }
   .footer .footer__inner .w-xl-100 {
-    width: 100% !important;
+    width: 100%!important;
   }
   .footer .footer__inner .offset-xl-1 {
     margin-left: 8.33333333%;
@@ -12103,12 +12105,12 @@ body.dark .ar-work-cat,
 }
 @media (min-width: 992px) {
   .footer .footer__inner .mb-lg-0 {
-    margin-bottom: 0 !important;
+    margin-bottom: 0!important;
   }
   .footer .footer__inner .order-lg-last {
-    -webkit-box-ordinal-group: 7 !important;
-        -ms-flex-order: 6 !important;
-            order: 6 !important;
+    -webkit-box-ordinal-group: 7!important;
+        -ms-flex-order: 6!important;
+            order: 6!important;
   }
   .footer .footer__inner .align-items-lg-end {
     -webkit-box-align: end !important;
@@ -12121,9 +12123,9 @@ body.dark .ar-work-cat,
             justify-content: flex-end !important;
   }
   .footer .footer__inner .d-lg-flex {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
   }
   .footer .footer__inner .col-lg-4 {
     -webkit-box-flex: 0;
@@ -12134,20 +12136,20 @@ body.dark .ar-work-cat,
 }
 @media (min-width: 576px) {
   .footer .footer__inner .d-sm-flex {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
   }
   .footer .footer__inner .align-items-sm-center {
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
+    -webkit-box-align: center!important;
+        -ms-flex-align: center!important;
+            align-items: center!important;
   }
 }
 @media (min-width: 768px) {
   .footer .footer__inner .d-md-flex {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box!important;
+    display: -ms-flexbox!important;
+    display: flex!important;
   }
 }
