--- a/assets/resources/styles/less/core/_normalize.less
+++ b/assets/resources/styles/less/core/_normalize.less
@@ -288,8 +288,7 @@ select {
 //
 
 button,
-html input[type="button"],
-// 1
+html input[type="button"], // 1
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button; // 2
