--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7336,7 +7336,7 @@ header {
     -webkit-box-sizing: inherit;
             box-sizing: inherit;
   }
-  .o-page-tail_inner {
+  .m-page-tail_inner {
     position: relative;
     padding-bottom: 2em;
     display: block;
