--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3894,7 +3894,7 @@
         // background-image: url('https://source.unsplash.com/b84nM5W-AF0');
     }
 
-    .o-page-tail_inner {
+    .m-page-tail_inner {
         position: relative;
         padding-bottom: 2em;
         display: block;
